<resources>
    <string name="app_name">xCam</string>
    <string name="title_manager">xCam</string>
    <string name="label_media_preview">Media Preview</string>
    <string name="label_none">None</string>
    <string name="btn_select_video">Select Media</string>
    <string name="note_restart">Note: Target apps must be restarted to apply changes.</string>
    <string name="toast_media_removed">Media removed</string>
    <string name="toast_media_imported">Media successfully imported</string>
    <string name="toast_media_import_failed">Failed to import media: %s</string>
    <string name="desc_media_preview">Media preview</string>
    <string name="status_module_active">Active</string>
    <string name="status_module_inactive">Inactive</string>
    <string name="desc_rotate_left">Rotate Left</string>
    <string name="desc_rotate_right">Rotate Right</string>
    <string name="desc_mirror">Mirror</string>
    <string name="label_active_scopes">Active Scopes</string>
    <string name="label_pipeline_monitor">Pipeline Route Monitor</string>
    <string name="label_capture_notification">Capture Alert Card</string>
    <string name="desc_capture_notification">Show heads-up notification card when a photo is captured</string>
    <string name="label_no_pipeline_history">Belum ada aktivitas hook terdeteksi</string>
    <string name="label_last_active_app">Target: %s</string>
    <string name="label_last_route">Rute Hook: %s</string>
    <string name="label_last_timestamp">Waktu: %s</string>
</resources>

